# adele-kde

./: AGENTS.md  README.md  justfile
client/: CMakeLists.txt  adeleclient.cpp  adeleclient.h  adelecore.cpp  adelecore.h  tst_adeleclient.cpp  tst_adelecore.cpp  tst_voicecontroller.cpp  voicecontroller.cpp  voicecontroller.h
kcm/desktop-assistant-settings/: CMakeLists.txt  daemonreply.cpp  daemonreply.h  daemonwsclient.cpp  daemonwsclient.h  desktopassistantkcm.cpp  desktopassistantkcm.h  tst_daemonreply.cpp  tst_voiceconfig.cpp  voiceconfig.cpp  voiceconfig.h
kcm/desktop-assistant-settings/ui/: AudioDevices.js  ConnectionEditor.qml  ConnectionsPage.qml  ConnectorConfig.js  InfoTip.qml  KnowledgePage.qml  McpServerEditor.qml  McpServersPage.qml  Personality.js  PersonalityPage.qml  PurposesPage.qml  ServiceAccountEditor.qml  ServiceAccountsSection.qml  VoiceBackends.js  VoicePage.qml  WhisperModels.js  main.qml
plasmoid/org.desktopassistant.desktopchat/: metadata.json
plasmoid/org.desktopassistant.desktopchat/contents/ui/: ChatView.qml  LinkSafety.js  QueueRecall.js  QueuedChip.qml  TasksBadge.qml  TasksView.qml  TasksWindow.qml  main.qml
plasmoid/org.desktopassistant.panelchat/: metadata.json
plasmoid/org.desktopassistant.panelchat/contents/code/: dbus_client.py  dbus_client_impl.py
plasmoid/org.desktopassistant.panelchat/contents/ui/: configGeneral.qml  main.qml
shared/chat-module/: README.md
shared/chat-module/code/: dbus_client.py
shared/chat-module/ui/: ChatView.qml  HelperRunner.js  MessageKind.js  QueueRecall.js  TasksView.qml
tests/: run_python_tests.sh  run_qml_tests.sh
tests/python/: test_background_tasks.py  test_cli_shapes.py  test_error_mapping.py  test_gdbus_parsing.py  test_helper_shim.py  test_message_filtering.py  test_transport_config.py  test_voice_commands.py  test_ws_framing.py
tests/qml/: tst_AudioDevices.qml  tst_ChatViewLoads.qml  tst_ConnectorConfig.qml  tst_HelperRunner.qml  tst_LinkSafety.qml  tst_MessageKind.qml  tst_PersonalityPage.qml  tst_QmlComponentsLoad.qml  tst_QueueRecall.qml  tst_QueuedChip.qml  tst_TasksBadge.qml  tst_TasksView.qml  tst_TasksWindow.qml  tst_VoiceBackends.qml  tst_VoiceControls.qml  tst_WhisperModels.qml
tests/smoke/: dbus_smoke.sh
